--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,27 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.svg">
+
+  <meta property="og:title" content="Ascyt" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ascyt.com" />
+  
+  <meta property="og:image" content="https://ascyt.com/assets/images/ascyt.png" />
+  <meta property="og:image:width" content="1024" />
+  <meta property="og:image:height" content="1024" />
+  <meta property="og:image:alt" content="Logo of Ascyt" />
+
+  <meta property="og:description" content="The personal website of Ascyt (Filip Schauer), a young developer from Austria." />
+
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale" content="en_GB" />
+
+  <meta property="og:site_name" content="Ascyt" />
+
+  <meta property="og:profile:first_name" content="Filip" />
+  <meta property="og:profile:last_name" content="Schauer" />
+  <meta property="og:profile:username" content="Ascyt" />
+  <meta property="og:profile:gender" content="male" />
 </head>
 <body>
   <app-root />
