Fixed incorrect image link

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ascyt.com" />
   
-  <meta property="og:image" content="https://ascyt.com/assets/images/ascyt.png" />
+  <meta property="og:image" content="https://ascyt.com/assets/images/logo.png" />
   <meta property="og:image:width" content="1024" />
   <meta property="og:image:height" content="1024" />
   <meta property="og:image:alt" content="Logo of Ascyt" />
